# budget-notion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  test_full_import.py  test_header_check.py  test_new_parser.py  test_page1_debug.py  test_pdf_debug.py  test_pdf_structure.py  test_table_headers.py
.github/workflows/: ci.yml
config/: settings.py
docker/: Dockerfile  docker-compose.yml
docs/: BANK_PDF_TO_CSV_PROMPT.md  CAMT053_PARSER.md  CategoryMetaData.md  FIXES.md  MANUAL_TESTING_PDF_IMPORT.md  NOTION_SCHEMA.md  PDF_IMPORT_FEATURE_SUMMARY.md  PHASE1_SUMMARY.md  QUICK_START.md  REQUIREMENTS.md
scripts/: check_notion_schema.py  setup.sh  test_notion_integration.sh
src/: container.py
src/application/dtos/: __init__.py  sync_dto.py  transaction_dto.py
src/application/services/: auto_tagger.py  categorization_service.py  sync_service.py
src/application/use_cases/: __init__.py  create_transaction.py  export_csv.py  import_camt053.py  import_csv.py  import_pdf.py  sync_transactions.py  update_reimbursement.py
src/domain/entities/: __init__.py  budget.py  category.py  transaction.py
src/domain/repositories/: __init__.py  transaction_repository.py
src/infrastructure/ai/: base_llm_client.py  litellm_client.py  ollama_client.py  prompt_builder.py  response_parser.py
src/infrastructure/parsers/: __init__.py  camt053_parser.py  csv_parser.py  pdf_parser.py
src/infrastructure/repositories/: __init__.py  notion_repository.py  sqlite_repository.py
src/interfaces/cli/: main.py
src/testbed/: __init__.py  loader.py  models.py  reporter.py  runner.py
testbed-examples/: README.md  categorization-test-suite.yaml
tests/: README.md  parse_openai.py  parse_perplexity.py
tests/fixtures/: generate_sample_pdfs.py
tests/test_application/: test_auto_tagger.py  test_categorization_service.py  test_import_pdf_use_case.py  test_sync_service.py
tests/test_domain/: test_transaction.py
tests/test_infrastructure/test_ai/: test_ollama_client.py  test_prompt_builder.py  test_response_parser.py
tests/test_infrastructure/test_parsers/: test_camt053_parser.py  test_pdf_parser.py
tests/test_integration/: test_cli_integration.py  test_pdf_import_integration.py  test_sync_integration.py
